--- a/Dockerfile-app
+++ b/Dockerfile-app
@@ -1,11 +1,11 @@
-FROM python:3.8
+# Dockerfile-app
+FROM python:3.9
 
 WORKDIR /app
 
 COPY requirements.txt requirements.txt
 RUN pip install -r requirements.txt
-RUN pip install celery redis
 
 COPY . .
 
-CMD ["python", "run.py"]
+CMD ["flask", "run", "--host=0.0.0.0"]
