--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,47 @@
 version: '3.8'
+
 services:
-  web:
-    build: .
+  db:
+    image: mysql:8.0
+    environment:
+      MYSQL_DATABASE: 'futureme'
+      MYSQL_USER: 'root'
+      MYSQL_PASSWORD: 'root'
+      MYSQL_ROOT_PASSWORD: 'root'
+    volumes:
+      - db_data:/var/lib/mysql
+    restart: always
+
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile-app
+    volumes:
+      - .:/app
     ports:
-      - "5000:5000"
+      - 5000:5000
+    depends_on:
+      - db
+
+  celery-worker:
+    build:
+      context: .
+      dockerfile: Dockerfile-celery-worker
     volumes:
       - .:/app
     depends_on:
       - db
-  db:
-    image: mysql:5.7
-    restart: always
-    environment:
-      MYSQL_DATABASE: 'futureme'
-      MYSQL_USER: 'user'
-      MYSQL_PASSWORD: 'password'
-      MYSQL_ROOT_PASSWORD: 'password'
+      - app
+
+  celery-beat:
+    build:
+      context: .
+      dockerfile: Dockerfile-celery-beat
     volumes:
-      - ./mysql:/var/lib/mysql
+      - .:/app
+    depends_on:
+      - db
+      - app
+
+volumes:
+  db_data: {}
