--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,15 @@
-flask==1.1.2
-flask_sqlalchemy==2.5.1
-flask_login==0.5.0
-flask_wtf==0.14.3
-flask_mail==0.9.1
-mysqlclient==2.0.3
-reportlab==3.5.66
-APScheduler==3.7.0
+flask_sqlalchemy
+SQLAlchemy
+flask_login
+flask_wtf
+flask_mail
+mysqlclient
+reportlab
+APScheduler
+Jinja2
+MarkupSafe
+itsdangerous
+Werkzeug
+celery
+python-dotenv
+email_validator
