--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     image: mysql:8.0
     environment:
       MYSQL_DATABASE: 'futureme'
-      MYSQL_USER: 'root'
-      MYSQL_PASSWORD: 'root'
+      MYSQL_USER: 'fmsa'
+      MYSQL_PASSWORD: 'fmsa-1598753'
       MYSQL_ROOT_PASSWORD: 'root'
     volumes:
       - db_data:/var/lib/mysql
@@ -22,6 +22,8 @@ services:
       - 5000:5000
     depends_on:
       - db
+    env_file:
+      - .env
 
   celery-worker:
     build:
@@ -32,6 +34,8 @@ services:
     depends_on:
       - db
       - app
+    env_file:
+      - .env
 
   celery-beat:
     build:
@@ -42,6 +46,13 @@ services:
     depends_on:
       - db
       - app
+    env_file:
+      - .env
+
+  redis:
+    image: redis:latest
+    ports:
+      - 6379:6379
 
 volumes:
   db_data: {}
